# biowatch

./: CMakeLists.txt  GettingStarted.md  ProjectHome.md  colors.hpp  filtering.hpp  image_source.cpp  readme.md  track.cpp  track.hpp  track_bgsub.cpp  track_pf.cpp  utils.cpp  utils.hpp  visualize_data.nb
mac/: makeappbundle.rb
mac/BioWatch.barebones.app/Contents/: Info.plist
mac/BioWatch.barebones.app/Contents/Resources/: qt.conf  summarizer.icns
